--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,5 +1,4 @@
-html,
-body {
+html, body {
     margin: 0;
     padding: 0;
     height: 100%;
@@ -10,6 +9,7 @@ body {
 
 .header {
     padding-top: 20px;
+    position: relative;
 }
 
 .login-box {
@@ -27,8 +27,7 @@ body {
     background: url(/assets/images/login_title.png)no-repeat center;
 }
 
-.login,
-.reg-box {
+.login, .reg-box {
     margin: 0 30px;
 }
 
@@ -51,8 +50,7 @@ body {
     padding-left: 32px;
 }
 
-.reg,
-.tologin {
+.reg, .tologin {
     display: flex;
     justify-content: flex-end;
 }
@@ -61,7 +59,6 @@ body {
     display: none;
 }
 
-.reg,
-.tologin a {
+.reg, .tologin a {
     font-size: 12px;
 }
